--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,3 +1,8 @@
+.carousel-indicators li {
+  width: 10px !important;
+  height: 10px !important;
+  border-radius: 100% !important; }
+
 .jumbotron {
   background-color: #ffffff !important;
   border-top: 5px solid #dbdbdb; }
