--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -4,6 +4,12 @@ $theme-colors: (
   "primary": #d95700
 );
 
+.carousel-indicators li {
+  width: 10px !important;
+  height: 10px !important;
+  border-radius: 100% !important;
+}
+
 .jumbotron {
   background-color: #ffffff !important;
   border-top: 5px solid rgb(219, 219, 219);
