--- a/src/css/style.css
+++ b/src/css/style.css
@@ -50,7 +50,7 @@ h2.background {
     z-index: -1; }
   h2.background span {
     /* to hide the lines from behind the text, you have to set the background color the same as the container */
-    background: #d5d5d5;
+    background: #727070;
     padding: 0 15px; }
 
 .card-img-top {
@@ -65,6 +65,15 @@ h2.background {
 .carousel-control-prev,
 .carousel-control-next {
   width: 3% !important; }
+
+.center {
+  margin: auto;
+  width: 70%;
+  border: 1px solid #73ad21;
+  padding: 10px; }
+
+.card-bg {
+  background-color: #d6d6d6 !important; }
 
 /*!
  * Bootstrap v4.1.3 (https://getbootstrap.com/)
@@ -129,7 +138,7 @@ body {
   line-height: 1.5;
   color: #212529;
   text-align: left;
-  background-color: #d5d5d5; }
+  background-color: #727070; }
 
 [tabindex="-1"]:focus {
   outline: 0 !important; }
@@ -465,7 +474,7 @@ mark,
 
 .img-thumbnail {
   padding: 0.25rem;
-  background-color: #d5d5d5;
+  background-color: #727070;
   border: 1px solid #dee2e6;
   border-radius: 0.25rem;
   max-width: 100%;
@@ -1116,7 +1125,7 @@ pre {
   .table tbody + tbody {
     border-top: 2px solid #dee2e6; }
   .table .table {
-    background-color: #d5d5d5; }
+    background-color: #727070; }
 
 .table-sm th,
 .table-sm td {
@@ -1243,7 +1252,7 @@ pre {
     background-color: rgba(0, 0, 0, 0.075); }
 
 .table .thead-dark th {
-  color: #d5d5d5;
+  color: #727070;
   background-color: #212529;
   border-color: #32383e; }
 
@@ -1253,7 +1262,7 @@ pre {
   border-color: #dee2e6; }
 
 .table-dark {
-  color: #d5d5d5;
+  color: #727070;
   background-color: #212529; }
   .table-dark th,
   .table-dark td,
@@ -1520,7 +1529,7 @@ textarea.form-control {
   background-color: #34ce57; }
 
 .was-validated .custom-control-input:valid:focus ~ .custom-control-label::before, .custom-control-input.is-valid:focus ~ .custom-control-label::before {
-  box-shadow: 0 0 0 1px #d5d5d5, 0 0 0 0.2rem rgba(40, 167, 69, 0.25); }
+  box-shadow: 0 0 0 1px #727070, 0 0 0 0.2rem rgba(40, 167, 69, 0.25); }
 
 .was-validated .custom-file-input:valid ~ .custom-file-label, .custom-file-input.is-valid ~ .custom-file-label {
   border-color: #28a745; }
@@ -1602,7 +1611,7 @@ textarea.form-control {
   background-color: #e4606d; }
 
 .was-validated .custom-control-input:invalid:focus ~ .custom-control-label::before, .custom-control-input.is-invalid:focus ~ .custom-control-label::before {
-  box-shadow: 0 0 0 1px #d5d5d5, 0 0 0 0.2rem rgba(220, 53, 69, 0.25); }
+  box-shadow: 0 0 0 1px #727070, 0 0 0 0.2rem rgba(220, 53, 69, 0.25); }
 
 .was-validated .custom-file-input:invalid ~ .custom-file-label, .custom-file-input.is-invalid ~ .custom-file-label {
   border-color: #dc3545; }
@@ -2538,7 +2547,7 @@ input[type="button"].btn-block {
     color: #fff;
     background-color: #d95700; }
   .custom-control-input:focus ~ .custom-control-label::before {
-    box-shadow: 0 0 0 1px #d5d5d5, 0 0 0 0.2rem rgba(217, 87, 0, 0.25); }
+    box-shadow: 0 0 0 1px #727070, 0 0 0 0.2rem rgba(217, 87, 0, 0.25); }
   .custom-control-input:active ~ .custom-control-label::before {
     color: #fff;
     background-color: #ffba8d; }
@@ -2709,11 +2718,11 @@ input[type="button"].btn-block {
   .custom-range:focus {
     outline: none; }
     .custom-range:focus::-webkit-slider-thumb {
-      box-shadow: 0 0 0 1px #d5d5d5, 0 0 0 0.2rem rgba(217, 87, 0, 0.25); }
+      box-shadow: 0 0 0 1px #727070, 0 0 0 0.2rem rgba(217, 87, 0, 0.25); }
     .custom-range:focus::-moz-range-thumb {
-      box-shadow: 0 0 0 1px #d5d5d5, 0 0 0 0.2rem rgba(217, 87, 0, 0.25); }
+      box-shadow: 0 0 0 1px #727070, 0 0 0 0.2rem rgba(217, 87, 0, 0.25); }
     .custom-range:focus::-ms-thumb {
-      box-shadow: 0 0 0 1px #d5d5d5, 0 0 0 0.2rem rgba(217, 87, 0, 0.25); }
+      box-shadow: 0 0 0 1px #727070, 0 0 0 0.2rem rgba(217, 87, 0, 0.25); }
   .custom-range::-moz-focus-outer {
     border: 0; }
   .custom-range::-webkit-slider-thumb {
@@ -2833,8 +2842,8 @@ input[type="button"].btn-block {
   .nav-tabs .nav-link.active,
   .nav-tabs .nav-item.show .nav-link {
     color: #495057;
-    background-color: #d5d5d5;
-    border-color: #dee2e6 #dee2e6 #d5d5d5; }
+    background-color: #727070;
+    border-color: #dee2e6 #dee2e6 #727070; }
   .nav-tabs .dropdown-menu {
     margin-top: -1px;
     border-top-left-radius: 0;
